# Kaisen_Yao_IDS706_Week8_Rust

./: .gitignore  Makefile  README.md  python_performance.md  rust_performance.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pythonCI.yml  rustCI.yml
data/: US_births_DB.db
python_proj/: Makefile  main.py  requirements.txt  test_main.py
python_proj/mylib/: extract.py  query.py  transform_load.py
rust_proj/: .gitignore  Cargo.toml  Makefile
rust_proj/src/: extract.rs  lib.rs  main.rs  query.rs  transform_load.rs
rust_proj/tests/: my_tests.rs
