[package]
name = "rust_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
systemstat = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.3"
rusqlite = "0.30.0"
libc = "^0.2"
sysinfo = "0.21.0"
clap = { version = "4.3.17", features = ["derive"] }
assert_cmd = "^2.0"
predicates = "0.9"
sys-info = "0.7.0"
# Consider replacing or removing the following if not used:
# time = "^0.1"
# rand = "^0.3"
# rustc-serialize = "^0.3"
# tempdir = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
